


-------------------------------------------------------------------
3.25.1:
-Price alert bug fixes / UX improvements
-------------------------------------------------------------------



-------------------------------------------------------------------
3.25.2:
-Price alert volume filter bug fix
-------------------------------------------------------------------



-------------------------------------------------------------------
3.26.0:
-UX improvements
-------------------------------------------------------------------



-------------------------------------------------------------------
3.26.1:
-Bug fix for countdown timer (when charts page is turned off)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.27.0:
-Leverage trading warning for newbies
-------------------------------------------------------------------



-------------------------------------------------------------------
3.28.0:
-Dominance stats UX revision (alt and btc maximalist-friendly, lol)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.29.0:
-Minor UX / content revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.29.1:
-Fixed "watch only" assets bug not registering to show on portfolio page, if no held assets are included
-------------------------------------------------------------------



-------------------------------------------------------------------
3.29.2:
-Fixed BTC/USD charts bug
-------------------------------------------------------------------



-------------------------------------------------------------------
3.30.0:
-Leverage trading UX / UI
-------------------------------------------------------------------




























































